feat: http client

--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,13 @@
-NODE_ENV=development
+NODE_ENV=test
 
 PORT=3000
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USERNAME=gcb
-DATABASE_PASSWORD=gcb@123
-DATABASE_NAME=fakeflix
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=fakeflix_test
 DATABASE_URL=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+
+MOVIEDB_API_TOKEN='test-token'
+MOVIEDB_BASE_URL=https://api.themoviedb.org/3
