--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: fakeflix
+      POSTGRES_DB: fakeflix_test
     ports:
       - '5432:5432'
     volumes:
